--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+.wrap{
+  width: 500px;
+  margin: 20px auto;
+  border: 1px solid #f1f1f1;
+}
+li{
+  list-style: none;
+}
